
syntax = "proto3";

package proto;

option go_package = "sovereignTx";
option (gogoproto.stable_marshaler_all) = true;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message SovereignTx  {
  uint64   Nonce          = 1  [(gogoproto.jsontag) = "nonce"];
  bytes    Value          = 2  [(gogoproto.jsontag) = "value", (gogoproto.casttypewith) = "math/big.Int;github.com/multiversx/mx-chain-core-go/data.BigIntCaster"];
  bytes    RcvAddr        = 3  [(gogoproto.jsontag) = "receiver"];
  bytes    SndAddr        = 4  [(gogoproto.jsontag) = "sender"];
  uint64   GasLimit       = 5 [(gogoproto.jsontag) = "gasLimit"];
  uint64   GasPrice       = 6 [(gogoproto.jsontag) = "gasPrice"];
  bytes    Data           = 7  [(gogoproto.jsontag) = "data,omitempty"];
}
